feat: 메인페이지 코드 수정 및 소셜 로그인 API 시도 중

--- a/html/layout/header.html
+++ b/html/layout/header.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/bootstrap-5.3.3-css-js/css/bootstrap.css"> <!--부트스트랩-->
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css"> <!--XE아이콘 CDN-->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/> <!--Swiper JS CDN-->
+    <link rel="stylesheet" href="/css/swiper-bundle.css"/> <!--Swiper JS 내장-->
     <link rel="stylesheet" href="/css/common.css">
     <link rel="stylesheet" href="/scss/layout.min.css?var=<?php echo time(); ?>">
     <link rel="stylesheet" href="/scss/footer.min.css?var=<?php echo time(); ?>">
