--- a/html/css/font.css
+++ b/html/css/font.css
@@ -1,4 +1,16 @@
 /* 구글폰트 Noto Sans KR (100-900) */
+.noto-sans-kr-medium-100 {
+    font-family: "Noto Sans KR", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 100;
+    font-style: normal;
+}
+.noto-sans-kr-bold-200 {
+    font-family: "Noto Sans KR", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 200;
+    font-style: normal;
+}
 .noto-sans-kr-light-300 {
     font-family: "Noto Sans KR", sans-serif;
     font-optical-sizing: auto;
@@ -23,10 +35,107 @@
     font-weight: 700;
     font-style: normal;
 }
+.noto-sans-kr-medium-800 {
+    font-family: "Noto Sans KR", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 800;
+    font-style: normal;
+}
+.noto-sans-kr-bold-900 {
+    font-family: "Noto Sans KR", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 900;
+    font-style: normal;
+}
 
 /* 구글폰트 Roboto (En, 100-900, italic) */
 .roboto-bold-italic {
     font-family: "Roboto", sans-serif;
+    font-weight: 100;
+    font-style: normal;
+}
+.roboto-bold-italic {
+    font-family: "Roboto", sans-serif;
+    font-weight: 200;
+    font-style: normal;
+}
+.roboto-bold-italic {
+    font-family: "Roboto", sans-serif;
+    font-weight: 300;
+    font-style: normal;
+}
+.roboto-bold-italic {
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+.roboto-bold-italic {
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+}
+.roboto-bold-italic {
+    font-family: "Roboto", sans-serif;
+    font-weight: 600;
+    font-style: normal;
+}
+.roboto-bold-italic {
+    font-family: "Roboto", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+}
+.roboto-bold-italic {
+    font-family: "Roboto", sans-serif;
+    font-weight: 800;
+    font-style: normal;
+}
+.roboto-bold-italic {
+    font-family: "Roboto", sans-serif;
+    font-weight: 900;
+    font-style: normal;
+}
+.roboto-bold-italic {
+    font-family: "Roboto", sans-serif;
+    font-weight: 100;
+    font-style: italic;
+}
+.roboto-bold-italic {
+    font-family: "Roboto", sans-serif;
+    font-weight: 200;
+    font-style: italic;
+}
+.roboto-bold-italic {
+    font-family: "Roboto", sans-serif;
+    font-weight: 300;
+    font-style: italic;
+}
+.roboto-bold-italic {
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-style: italic;
+}
+.roboto-bold-italic {
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-style: italic;
+}
+.roboto-bold-italic {
+    font-family: "Roboto", sans-serif;
+    font-weight: 600;
+    font-style: italic;
+}
+.roboto-bold-italic {
+    font-family: "Roboto", sans-serif;
     font-weight: 700;
     font-style: italic;
-}        
+}
+.roboto-bold-italic {
+    font-family: "Roboto", sans-serif;
+    font-weight: 800;
+    font-style: italic;
+}
+.roboto-bold-italic {
+    font-family: "Roboto", sans-serif;
+    font-weight: 900;
+    font-style: italic;
+}
