--- a/html/layout/footer.html
+++ b/html/layout/footer.html
@@ -119,7 +119,7 @@
 
 
 <script src="/bootstrap-5.3.3-css-js/js/bootstrap.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script> <!--Swiper JS CDN-->
+<script src="/js/swiper-bundle.js"></script> <!--Swiper JS 내장-->
 <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 <script src="/js/header.js"></script>
 <script src="/js/main.js"></script>
