--- a/html/scss/_var.scss
+++ b/html/scss/_var.scss
@@ -1,10 +1,10 @@
-@mixin SwiperButtonDesign ($width: 42px, $height: 42px, $bgColor: rgba(0, 0, 0, 0.2)) {
+@mixin SwiperButtonDesign ($width: 2.625rem, $height: 2.625rem, $bgColor: rgba(0, 0, 0, 0.4)) {
     width: $width;
     height: $height;
     background-color: $bgColor;
     border-radius: 50%;
 }
-@mixin spanAngleBracket ($width: 32px, $height: 32px, $border: 2px, $borderColor: #fff, $angle: 180) {
+@mixin angleBracket ($width: 1rem, $height: 1rem, $border: 2px, $borderColor: #fff, $angle: 180) {
     width: $width;
     height: $height;
     border: solid #{$border} #{$borderColor};
