--- a/html/scss/movie.scss
+++ b/html/scss/movie.scss
@@ -71,7 +71,7 @@
             }
         }
     }
-    #mainBannerBox{
+    #movieMainNR{
         width: 100%;
         max-width: 1920px;
         height: 700px;
