feat: 영화페이지 작업중

--- a/html/layout/header.html
+++ b/html/layout/header.html
@@ -13,9 +13,14 @@
     <meta name="theme-color" content="#ffffff">
     <!---------------------------------------------------------------------------->
     <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/bootstrap-5.3.3-css-js/css/bootstrap.css"> <!--부트스트랩-->
-    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css"> <!--XE아이콘 CDN-->
-    <link rel="stylesheet" href="/css/swiper-bundle.css"/> <!--Swiper JS 내장-->
+    <!--부트스트랩-->
+    <link rel="stylesheet" href="/bootstrap-5.3.3-css-js/css/bootstrap.css">
+    <!--XE아이콘 CDN-->
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
+    <!--Swiper JS 내장-->
+    <link rel="stylesheet" href="/css/swiper-bundle.css"/>
+    <!-- // JavaScript Full SDK 2.7.2(2024.5.22) 최신버전 업데이트 확인 필요함 -->
+    <script src="https://t1.kakaocdn.net/kakao_js_sdk/2.7.2/kakao.min.js" integrity="sha384-TiCUE00h649CAMonG018J2ujOgDKW/kVWlChEuu4jK2vxfAAD0eZxzCKakxg55G4" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/common.css">
     <link rel="stylesheet" href="/scss/layout.min.css?var=<?php echo time(); ?>">
     <link rel="stylesheet" href="/scss/footer.min.css?var=<?php echo time(); ?>">
