--- a/html/layout/footer.html
+++ b/html/layout/footer.html
@@ -123,5 +123,6 @@
 <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 <script src="/js/header.js"></script>
 <script src="/js/main.js"></script>
+<script src="/js/login.js"></script>
 </body>
 </html>
